--- a/styles/layout/_global.scss
+++ b/styles/layout/_global.scss
@@ -2,6 +2,12 @@ body{
     max-width: 100%;
     width: 100vw;
     overflow-x: hidden;
+    font-family: "Roboto", sans-serif;
+}
+.wrapper{
+    width: 95%;
+    max-width: 1350px;
+    margin: 0 auto;
 }
 a{
     text-decoration: none;
@@ -9,11 +15,7 @@ a{
         cursor: pointer;
     }
 }
-.wrapper{
-    width: 90%;
-    max-width: 1350px;
-    margin: 0 auto;
-}
+
 h2{
     font-family: "Dancing Script", cursive;
     font-size: 50px;
@@ -28,17 +30,18 @@ h2{
     border-radius: 20px;
     text-transform: uppercase;
     box-shadow: 0 3px rgb(39, 33, 33, 0.7);
-    position: relative;
-    a{
+    div{
         @include absmiddle;
-        width: 90%;
+        width: 100%;
         text-align: center;
         font-family: "Teachers", sans-serif;
         font-weight: 500;
         letter-spacing: 1.3px;
         color: $beige;
     }
-
+    &:hover{
+        background-color: $aubergineHover;
+    }
 }
 .fa-user{
     margin-right: 10px;
