--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -6,6 +6,7 @@ header{
         margin: 125px auto -75px;
     }
 }
+//Bouton Se Connecter
 .connect{
     display: none;
     @media screen and (min-width: 1024px){
@@ -14,20 +15,20 @@ header{
         top: 0;
         right: 7%;
         z-index: 200;
-        padding: 7px 50px 9px;
-        border-bottom-left-radius: 20px;
-        border-bottom-right-radius: 20px;
+        padding: 8px 60px 10px;
+        border-bottom-left-radius: 15px;
+        border-bottom-right-radius: 15px;
         background-color: $aubergine;
-        font-size: 20px;
-        a{
-            color: #fff;
-        }   
+        font-size: 16px;
+        color: #fff;
+        &:hover{
+            background-color: $aubergineHover;
+        }
     }  
 }
 //div beige avec logo PamG Digital
 .logoBox{
-    width: 100%;
-    padding: 30px 30px 15px;
+    padding: 30px 0 20px;
     background-color: $beige;
     text-align: center;
     img{
@@ -52,19 +53,19 @@ header{
     width: 100%;
     height: 60vh;
     position: absolute;
-    top: 135px;
+    top: 125px;
     left: 0;
     z-index: -3;
     &::after{
         @include whitefilter_before(0.2);
     }  
     @media screen and (min-width: 1024px){
-        top: 255px; 
+        top: 265px; 
     }
 }
 .beigeCircle{
-    width: 400px;
-    height: 400px;
+    width: 405px;
+    height: 405px;
     border-radius: 50%;
     background-color: rgb(250, 242, 221, 0.7);
     position: absolute;
@@ -79,7 +80,6 @@ header{
         top: 30%;
         left: 2%;
         translate: -2% 0 0;
-        
     }
     @media screen and (min-width: 1024px){
         width: 500px;
@@ -87,6 +87,46 @@ header{
         border-radius: 50%;
         top: 37%;
         left: 6%;  
+    }
+}
+//div avec les questions
+.teasingBox{
+    text-align: center;
+    width: 405px;
+    height: 405px;
+    border-radius: 50%;
+    padding: 20px 90px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    translate: -50% 0 0;
+    .slug{
+        opacity: 0;
+        transition: 0.5s ease-in-out;
+        margin-bottom: 35px;
+        @include menuTypo(400, 20px);
+        text-shadow: 1px 1px #fff;
+    }
+    .slugShow{
+        opacity: 1;
+    }
+    @media screen and (min-width: 820px){
+        width: 260px;
+        top: 9%;
+        right: 19%;
+        margin: 10px;
+        padding: 30px 10px;
+        .slug{
+            @include menuTypo(400, 26px);
+        }
+    }
+    @media screen and (min-width: 1024px){
+        width: 300px;
+        top: 12%;
+        right: 18%;
+        .slug{
+            @include menuTypo(400, 26px);
+        }
     }
 }
 .aubergineCircle{
@@ -108,45 +148,6 @@ header{
         height: 600px;
         right: 5%;
         transition: 0.5s ease-in-out;
-    }
-}
-//div avec les questions
-.teasingBox{
-    text-align: center;
-    width: 270px;
-    margin: 10px;
-    padding: 30px 10px;
-    position: absolute;
-    top: -3%;
-    left: 49%;
-    translate: -49% 0 0;
-    .slug{
-        opacity: 0;
-        transition: 0.5s ease-in-out;
-        margin-bottom: 35px;
-        @include menuTypo(400, 22px);
-        text-shadow: 1px 1px #fff;
-    }
-    .slugShow{
-        opacity: 1;
-    }
-    @media screen and (min-width: 820px){
-        width: 260px;
-        top: 9%;
-        right: 19%;
-        .slug{
-            @include menuTypo(400, 26px);
-
-        }
-    }
-    @media screen and (min-width: 1024px){
-        width: 300px;
-        top: 12%;
-        right: 18%;
-        .slug{
-            @include menuTypo(400, 26px);
-
-        }
     }
 }
 .arrow{
@@ -218,7 +219,8 @@ header{
     translate: -50% 0 ;
     margin: 0 auto;
     @media screen and (min-width: 1024px){
-        width: 35%;
+        width: 40%;
     }
+    
 }
 
