--- a/styles/layout/_global.scss
+++ b/styles/layout/_global.scss
@@ -9,6 +9,8 @@ body{
     max-width: 1350px;
     margin: 0 auto;
 }
+
+//Liens
 a{
     text-decoration: none;
     &:hover{
@@ -16,6 +18,7 @@ a{
     }
 }
 
+//Titres de chaques parties sur HomePage
 h2{
     font-family: "Dancing Script", cursive;
     font-size: 50px;
@@ -25,12 +28,20 @@ h2{
         font-size: 60px;
     }
 }
+
+//Bouton fond aubergine
 .homebtn{
+    width: 95%;
+    height: 70px;
     background-color: $aubergine;
     border-radius: 20px;
     text-transform: uppercase;
     box-shadow: 0 3px rgb(39, 33, 33, 0.7);
-    div{
+    position: relative;
+    @media screen and (min-width: 1024px){
+        width: 40%;
+    }
+    .click{
         @include absmiddle;
         width: 100%;
         text-align: center;
@@ -43,6 +54,8 @@ h2{
         background-color: $aubergineHover;
     }
 }
+
+//Icône user
 .fa-user{
     margin-right: 10px;
 }
