--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -3,9 +3,9 @@
 .approcheBckgrd{
     background-color: $beige;
     text-align: center;
-    padding: 0 0 50px;
+    padding-bottom: 60px;
     .approcheBoxes{
-        @include minmax (300px);
+        @include minmax (330px);
         justify-items: center;
     }
     .approcheBox{
@@ -46,17 +46,16 @@
 opacity : 1;
 transform: translateY(0);
 }
+//Reconnais Part
 .rappelbtn{
     text-align: center;
     background-color: #fff;
-    height: 600px;
-    position: relative;
+    padding-bottom: 60px;
     .reconnaisBox{
         width: 350px;
-        text-align: justify;
+        text-align: center;
         @media screen and (min-width: 820px){
             width: 700px;
-         
          }
          @media screen and (min-width: 1024px){
             width: 1000px;
@@ -76,64 +75,39 @@ transform: translateY(0);
             color: $aubergine;
             font-weight: bold;
         }
-       
+    }
+    .potentiel{
+        margin-top: 60px;
+        font-size: 20px;
+        font-weight: bold;
 
     }
-    @media screen and (min-width: 820px){
-       height: 500px;
-    
-    }
-}
-
-
-
-
-
-
-
-
-//div témoignages
-.temoignagesBckgd{
-    background-color: #fff;
-    padding: 0 0 50px;
-    text-align: center;
-    h2{
-        margin-bottom: 25px;
-    }
-    .temoignagesBoxes{
-        @include minmax (300px);
-        justify-items: center;
-    }
-    .temoignageBox{
-        position: relative;
-        width: 450px;
-        padding: 10px 30px;
-        border-radius: 20px;
-       
-        p{
-            padding: 15px 30px;
+    .mainbtn{
+        margin: 40px auto 0;
+        height: 80px;
+        .click{
+            div:nth-of-type(2){
+                margin-top: 10px;
+                font-style: italic;
+                text-transform: none;
+                font-size: 14px;
+                font-weight: lighter;
+            }
         }
-    }
-}
-.temoignageleft {
-transform: translateX(-40px);
-transition: transform 1s ease-out;
-}
-.temoignageright {
-transform: translateX(40px);
-transition: transform 1s ease-out;
-}
-.temoignagereveal {
-transform: translateX(0);
+    } 
 }
 //div photo balançoire
 .balancoirebckgd{
     position: relative;
-    width: 100%;
-    height: 400px;
+    height: 450px;
     background: url(../images/PamBalancoire.JPG) right/cover;
+    @media screen and (min-width: 820px){
+        
+        height: 550px;
+    }
     @media screen and (min-width: 1200px){
         background-attachment: fixed;
+        
     }
     &::before{
     content:'';
@@ -165,7 +139,7 @@ transform: translateX(0);
         }
         @media screen and (min-width: 1024px){
             width: 800px;
-            top: 20%;
+            top: 35%;
             left: 8%;
             translate: -6% 0 0;
             p{
@@ -174,35 +148,88 @@ transform: translateX(0);
         }
     } 
 }
-//div screen app pour relancer call to action
-
-
-
-.cookie{
-    background-color: $aubergine;
-    width: 90%;
-    color:#fff;
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    position: fixed;
-    bottom: 0;
-    left: 50%;
-    translate: -50% 0 0;
-    padding: 25px;
-    border: 1px solid $beige;
+//div témoignages
+.temoignagesBckgd{
+    background-color: #fff;
+    padding-bottom: 60px;
     text-align: center;
-    z-index: 10;
-    transform: translateY(100%);
-    opacity: 0;
-    transition: transform 1s ease-out;
-    .policy{
-        width: 55%;
-        margin: 5px auto;
+    .temoignagesBoxes{
+        @include minmax (415px);
+        justify-items: center;
+        
+        @media screen and (min-width: 1350px){
+            gap: 40px;
+        }
+    }
+    .temoignageBox{
+        width: 350px;
+        background-color: #faf2dd6d;
+        padding: 30px;
+        border-radius: 10px;
+        margin-bottom: 20px;
+        @media screen and (min-width: 500px){
+            width: 450px;
+        }
+        @media screen and (min-width: 1350px){
+            margin-bottom: 0;
+        }
+        p{
+            padding: 15px 30px;
+        }
+        .starsFour{
+            .fa-star:not(:last-child){
+                color: $aubergine;
+            }
+            .fa-star:last-child{
+                color: rgba(0, 0, 0, 0.5);
+            }
+        }
+        .starsFive{
+            .fa-star{
+                color: $aubergine;
+            }
+        }
     }
 }
-.cookieShow{
-    transform: translateY(0);
-    opacity: 1;
-
+.temoignageleft {
+transform: translateX(-40px);
+transition: transform 1s ease-out;
 }
+.temoignageright {
+transform: translateX(40px);
+transition: transform 1s ease-out;
+}
+.temoignagereveal {
+transform: translateX(0);
+}
+
+
+
+// .cookie{
+//     background-color: $aubergine;
+//     width: 90%;
+//     color:#fff;
+//     border-top-left-radius: 15px;
+//     border-top-right-radius: 15px;
+//     position: fixed;
+//     bottom: 0;
+//     left: 50%;
+//     translate: -50% 0 0;
+//     padding: 25px;
+//     border: 1px solid $beige;
+//     text-align: center;
+//     z-index: 10;
+//     transform: translateY(100%);
+//     opacity: 0;
+//     transition: transform 1s ease-out;
+//     .policy{
+//         width: 55%;
+//         margin: 5px auto;
+//     }
+// }
+// .cookieShow{
+//     transform: translateY(0);
+//     opacity: 1;
+
+// }
 
