--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -80,6 +80,7 @@ transform: translateY(0);
         margin-top: 60px;
         font-size: 20px;
         font-weight: bold;
+        padding: 0 30px;
 
     }
     .mainbtn{
