--- a/styles/pages/_versmetierideal.scss
+++ b/styles/pages/_versmetierideal.scss
@@ -3,6 +3,7 @@
     height: 100vh;
     margin: 0;
     font-family: "Teachers", sans-serif;
+    position: relative;
 }
 .cross{
     position: absolute;
