--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -43,7 +43,7 @@ header{
         font-size: 14px;
         span:not(:last-child)::after{
             content: '•';
-            margin: 0 5px;
+            margin: 0 5px 0 10px;
         }
     }
 }
