--- a/styles/layout/_global.scss
+++ b/styles/layout/_global.scss
@@ -59,3 +59,32 @@ h2{
 .fa-user{
     margin-right: 10px;
 }
+
+//Pages beige
+.beigeBoxPages{
+    background-color: $beige;
+    height: 100vh;
+    margin: 0;
+    font-family: "Teachers", sans-serif;
+    position: relative;
+}
+//Croix sur les pages
+.cross{
+    position: absolute;
+    top: 35px;
+    right: 35px;
+    width: 35px;
+    height: 35px;
+    cursor: pointer; 
+    .crossLine{
+        width: 30px;
+        height: 2px;
+        background-color: $aubergine;
+    }
+    .crossLine:nth-of-type(1){
+        transform: translateY(5px) rotate(45deg);
+    }
+    .crossLine:nth-of-type(2){
+        transform: translateY(3px) rotate(-45deg);
+    }
+}
