--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -1,11 +1,8 @@
 footer{
     background-color: $beige;
-    height: 445px;
     padding: 30px 0;
     font-family: "Teachers", sans-serif;
-    @media screen and (min-width: 1024px){
-        height: 300px;
-    }
+   
     h2{
         font-size: 45px;
         margin: 0 0 25px;
@@ -37,30 +34,41 @@ footer{
         @include absmiddle;
     }
 }
-.menuFooterNav{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin: 35px 0;
+.navsBox{
     a{
-        margin-bottom: 10px;
-    }  
-    @media screen and (min-width: 1024px){
-        flex-direction: row;
-        justify-content: center;
-        margin-top: 40px;
-        a:not(:last-child){
-            margin-right: 20px;
-        }  
-
+        &:hover{
+            color: #000;
+        }
     }
-}
-.politicsNav{
-    text-align: center;
-    font-size: 14px;
-    span:not(:last-child)::after{
-        content: '｜';
-        margin: 0 5px;
+    .menuFooterNav{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        margin: 40px 0 20px;
+        a{
+            margin-bottom: 10px;
+        }  
+        @media screen and (min-width: 1024px){
+            flex-direction: row;
+            justify-content: center;
+            a:not(:last-child){
+                margin-right: 20px;
+            }  
+
+        }
+    }
+    .footerbtn{
+        margin: 0 auto 50px;
+        height: 50px;
+        text-transform: none;
+    }
+    .politicsNav{
+        text-align: center;
+        font-size: 14px;
+        span:not(:last-child)::after{
+            content: '｜';
+            margin: 0 5px;
+        }
     }
 }
 .createdby{
