--- a/styles/layout/_global.scss
+++ b/styles/layout/_global.scss
@@ -9,6 +9,11 @@ body{
     max-width: 1350px;
     margin: 0 auto;
 }
+img{
+    display: block;
+    width: 100%;
+    max-width: 100%;
+}
 
 //Liens
 a{
