--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -33,6 +33,7 @@ header{
     text-align: center;
     img{
         width: 250px;
+        margin: 0 auto;
     }
     .sublogo{
         text-transform: uppercase;
