--- a/styles/layout/_global.scss
+++ b/styles/layout/_global.scss
@@ -13,6 +13,7 @@ img{
     display: block;
     width: 100%;
     max-width: 100%;
+    margin: 0 auto;
 }
 
 //Liens
@@ -21,6 +22,10 @@ a{
     &:hover{
         cursor: pointer;
     }
+}
+
+ul{
+    list-style-type: none;
 }
 
 //Titres de chaques parties sur HomePage
