--- a/styles/style.scss
+++ b/styles/style.scss
@@ -14,4 +14,5 @@
 @import 'pages/versmetierideal';
 @import 'pages/prendreunrendezvous';
 @import 'pages/chargement';
+@import 'pages/identification';
 
