--- a/styles/layout/_global.scss
+++ b/styles/layout/_global.scss
@@ -71,12 +71,17 @@ h2{
 }
 
 //Pages beige
-.beigeBoxPages{
-    background-color: $beige;
+.boxPages{
     height: 100vh;
     margin: 0;
     font-family: "Teachers", sans-serif;
     position: relative;
+}
+.beigeBoxPages{
+    background-color: $beige;
+}
+.aubergineBoxPages{
+    background-color: $aubergine;
 }
 //Croix sur les pages
 .cross{
@@ -90,6 +95,9 @@ h2{
         width: 30px;
         height: 2px;
         background-color: $aubergine;
+    }
+    .lineCompte{
+        background-color: $beige;
     }
     .crossLine:nth-of-type(1){
         transform: translateY(5px) rotate(45deg);
