--- a/styles/layout/_nav.scss
+++ b/styles/layout/_nav.scss
@@ -55,7 +55,7 @@
             flex-direction: column;
             text-align: center;
             position: absolute;
-            top: 40%;
+            top: 35%;
             left: 50%;
             translate: -50% -40% 0;
             a{
@@ -86,9 +86,12 @@
             .fa-user{
                 font-size: 20px;
             }
-            a:last-child{
+            .logInBoxMenuDown{
                 margin-top: 60px;
-                font-size: 20px;
+                a{
+                    font-size: 20px;
+                    margin-bottom: 20px;
+                }  
             }
         }  
     }
