--- a/styles/pages/_identification.scss
+++ b/styles/pages/_identification.scss
@@ -6,24 +6,50 @@
     text-align: center;
     @include absmiddle;
     padding: 50px;
+    overflow: hidden;
+    position: relative;
+    img{
+        width: 200px;
+        position: absolute;
+        bottom: 5px;
+        right: -30px;
+        z-index: -1;
+        filter: opacity(0.2);
+    }
+    .password-container {
+        width: 200px;
+        position: relative;
+        margin: 0 auto;
+        @media screen and (min-width: 820px){
+            width: 300px;
+        }
+    }
+    .eye-icon {
+        cursor: pointer;
+        position: absolute;
+        right: 8px;
+        top: 33px;
+        transform: translateY(-50%);
+        color: grey;
+    }
+   
     a{
         color: $aubergine;
         font-size: 20px;
         font-weight: 500;
-        
-        &:first-child{
-            margin-right: 10px;
+        &:nth-of-type(1){
+            margin-right: 20px;
         }
         &:nth-of-type(2){
             margin-left: 10px;
         }
-       
     }
     .boldLog{
         font-weight: bold;
     }
     .logSection{
         padding: 20px;
+        
         div{
             margin-top: 15px;
             
@@ -34,6 +60,9 @@
                     width: 300px;
                 }
             }
+        }
+        .checkbox{
+            margin: 15px 0 10px;
         }
         button{
             width: 200px;
