--- a/styles/pages/_moncompte.scss
+++ b/styles/pages/_moncompte.scss
@@ -1,11 +1,16 @@
 .helloPart{
     @include absmiddle;
     background-color: $beige;
-    width: 85%;
+    width: 100%;
+    margin-top: 70px;
     padding: 50px;
     text-align: center;
     border-radius: 20px;
     border: 5px solid #fff;
+    @media screen and (min-width: 700px){
+        margin-top: 0;
+        width: 90%;
+    }
     @media screen and (min-width: 1024px){
         width: 70%;
     }
