--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -75,7 +75,7 @@ header{
     width: 405px;
     height: 405px;
     border-radius: 50%;
-    background-color: rgb(250, 242, 221, 0.7);
+    background-color: rgb(250, 242, 221, 0.75);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -100,42 +100,58 @@ header{
 //div avec les questions
 .teasingBox{
     text-align: center;
-    width: 405px;
+    width: 425px;
     height: 405px;
     border-radius: 50%;
     padding: 20px 90px;
     position: absolute;
-    top: 0;
+    top: 9%;
     left: 50%;
     translate: -50% 0 0;
-    .slug{
-        opacity: 0;
-        transition: 0.5s ease-in-out;
-        margin-bottom: 35px;
-        @include menuTypo(400, 20px);
-        text-shadow: 1px 1px #fff;
-    }
-    .slugShow{
-        opacity: 1;
-    }
     @media screen and (min-width: 820px){
         width: 260px;
         top: 9%;
-        right: 19%;
+        left: 49%;
         margin: 10px;
         padding: 30px 10px;
-        .slug{
-            @include menuTypo(400, 26px);
-        }
+        // .slug{
+        //     @include menuTypo(400, 26px);
+        // }
     }
     @media screen and (min-width: 1024px){
-        width: 300px;
-        top: 12%;
-        right: 18%;
-        .slug{
-            @include menuTypo(400, 26px);
-        }
+        width: 310px;
+        top: 6%;
+        // .slug{
+        //     @include menuTypo(400, 26px);
+        // }
     }
+    // .slug{
+    //     opacity: 0;
+    //     transition: 0.5s ease-in-out;
+    //     margin-bottom: 35px;
+    //     @include menuTypo(400, 20px);
+    //     text-shadow: 1px 1px #fff;
+    // }
+    // .slugShow{
+    //     opacity: 1;
+    // }
+    div{
+        font-family: "Gochi Hand", cursive;
+        font-size: 22px;
+        text-shadow: 1px 1px #fff;
+        line-height: 1.3;
+        @media screen and (min-width: 820px){
+            font-size: 22px;
+            rotate: -2deg;
+           
+        }
+        @media screen and (min-width: 1024px){
+            font-size: 26px;
+           
+        }
+
+    }
+    
 }
 .aubergineCircle{
     background-color: rgb(93, 18, 59, 0.6);
@@ -186,38 +202,47 @@ header{
         left: 17%; 
     }
     @media screen and (min-width: 1670px){
-        width: 300px;
-        top: 79%;
-        left: 16%;
-        rotate: 200deg;
+        width: 250px;
+        top: 81%;
+        left: 17%;
+        rotate: 205deg;
     }  
 }
-.textbeforebtn{
-    text-align: center;
-    width: 100px;
-    position: absolute;
-    top: 75%;
-    left: 5%;
-    rotate: -15deg;
-    font-family: "Gochi Hand", cursive;
-    @media screen and (min-width: 820px){
-        top: 82%;
-        left: 22%;
-    }
-    @media screen and (min-width: 1024px){
-        top: 92%;
-        left: 13%; 
-    }  
-    @media screen and (min-width: 1400px){
-        left: 13%; 
-    } 
-    @media screen and (min-width: 1500px){
-        left: 16%; 
-    } 
-    @media screen and (min-width: 1670px){ 
-        left: 16%;
-    } 
+@keyframes blink {
+    0% { opacity: 1; }
+    50% { opacity: 0; }
+    100% { opacity: 1; }
 }
+
+.blinking {
+    animation: blink 1s 5;
+}
+// .textbeforebtn{
+//     text-align: center;
+//     width: 100px;
+//     position: absolute;
+//     top: 75%;
+//     left: 5%;
+//     rotate: -15deg;
+//     font-family: "Gochi Hand", cursive;
+//     @media screen and (min-width: 820px){
+//         top: 82%;
+//         left: 22%;
+//     }
+//     @media screen and (min-width: 1024px){
+//         top: 92%;
+//         left: 13%; 
+//     }  
+//     @media screen and (min-width: 1400px){
+//         left: 13%; 
+//     } 
+//     @media screen and (min-width: 1500px){
+//         left: 16%; 
+//     } 
+//     @media screen and (min-width: 1670px){ 
+//         left: 16%;
+//     } 
+// }
 .headerbtn{
     position: absolute;
     top: 90%;
