--- a/styles/layout/_footer.scss
+++ b/styles/layout/_footer.scss
@@ -58,9 +58,11 @@ footer{
         }
     }
     .footerbtn{
+        width: 400px;
         margin: 0 auto 50px;
         height: 50px;
         text-transform: none;
+     
     }
     .politicsNav{
         text-align: center;
