--- a/styles/pages/_moncompte.scss
+++ b/styles/pages/_moncompte.scss
@@ -2,8 +2,8 @@
     @include absmiddle;
     background-color: $beige;
     width: 100%;
-    margin-top: 70px;
-    padding: 50px;
+    margin-top: 60px;
+    padding: 50px 0 75px;
     text-align: center;
     border-radius: 20px;
     border: 5px solid #fff;
@@ -22,26 +22,33 @@
         }
     }
     .resultCompte{
-        width: 100%;
+        width: 90%;
         margin: 50px auto 0;
         @media screen and (min-width: 1024px){
-            width: 60%;
         }
-
         p{
             margin: 2px;
             line-height: 1.7;
-            &:last-child{
-                margin-bottom: 60px;
+            &:nth-of-type(3), &:nth-of-type(4){
+                margin-bottom: 20px;
             }
+            &:nth-of-type(5){
+                margin-bottom: 20px;
+            }
+            &:last-child{
+                margin-bottom: 50px;
+            }
+        }
+        .resultCompteBold{
+            font-weight: bold;
+            font-size: 20px;
         }
     }
     .btnCompte{
-        width: 250px;
         background-color: $aubergine;
         color: #fff;
         padding: 15px 30px;
-
+        text-transform: uppercase;
         border-radius: 10px;
         @media screen and (min-width: 500px){
             padding: 15px 80px;
